--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,21 @@
- body {
-    margin : 0;
-    padding : 0;
+ * {
     box-sizing: border-box;
-    background-color: rgb(14, 14, 84);
-    text-align: center;
- };
-
- .onlineQuizApp {
-    width : 80%;
-    border-radius: 10px;
-    color: #f7f3f3;
-    background-color: black;
-
-
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
+  :root {
+    --hue-nuetral:200;
+    --hue-wrong: 0;
+    --hue-correct: 145;
+  }
+ body {
+    --hue: var(--hue-nuetral);
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: hsl(var(--hue),100%,20%);
+    
  }
