--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,11 @@
     background-color: hsl(var(--hue),100%,20%);
     
  }
- .chooseAnswer img {
-   width: 100px;
-   height: 100px;
+ img {
+   border: 1px solid #ddd;
+   padding: 5px;
+   width: 150px;
+ 
+   
 
  }
