add styles to img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,12 @@
     
  }
  img {
-   border: 1px solid #ddd;
+   
    padding: 5px;
-   width: 150px;
+   width: 180px;
+   height: 180px;
+   border-radius: 10px;
+   margin: 5px;
  
    
 
