--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
  * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  }
@@ -9,24 +11,32 @@
   }
  body {
     --hue: var(--hue-nuetral);
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
     background-color: hsl(var(--hue),100%,20%);
     
  }
- img {
-   
-   padding: 5px;
-   width: 180px;
-   height: 180px;
-   border-radius: 10px;
-   margin: 5px;
  
-   
+ .container {
+  width : 80%;
+  max-width: 600px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  margin: 100px auto 0;
+ }
+ .container h1 {
+  font-size: 25px;
+  font-weight: 600;
+  padding-bottom: 30px;
+  color: #001e4d;
+  text-transform: capitalize;
+
+ }
+ .onlineQuiz-container {
+  padding: 20px 0;
+ }
+ #question {
+  font-size: 18px;
+  color: #001e4d;
+  font-weight: 600;
 
  }
