--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,13 +43,14 @@
   padding: 20px 0;
  }
  #question {
-  font-size: 18px;
+  font-size: 24px;
   color: #001e4d;
   font-weight: 600;
-  
+  padding: 5px 10px; 
+  margin: 0 auto;
 
  }
- img {
+ .image {
    width: 150px;
    height: 150px;
    margin: 10px;
