--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,15 @@
    .wrong {
     background-color: rgb(120, 55, 55);
    }
+   
+   #submit-answer {
+    text-align: center;
+    font-size: 20px;
+    margin: 10px;
+    width: 100%;
+    color: blue;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: rgb(186, 133, 34);
+   }
