--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,15 @@
     background-color: hsl(var(--hue),100%,20%);
    
  }
+ #heading {
+   text-align: center;
+   width: 100%;
+   color: white;
+   margin-top: 15px;
+   font-size: 40px;
+   
+   text-transform: capitalize;
+ }
  .logo-image {
   width: 100%;
   height: auto;
@@ -24,8 +33,8 @@
  }
  .logo-image img {
    width: 50%;
-  max-width: 500px;
-  height: 250px;
+  max-width: 600px;
+  height: 350px;
   display: block;
   border-radius: 10px;
 
@@ -40,15 +49,7 @@
   padding: 30px;
   margin: 100px auto 0;
  }
- .container h1 {
-  font-size: 25px;
-  font-weight: 600;
-  padding-bottom: 25px;
-  color: #001e4d;
-  text-transform: capitalize;
-  text-align: center;
-
- }
+ 
  
  .onlineQuiz-container {
   padding: 20px 0;
@@ -95,6 +96,23 @@
       display: flex;
       justify-content: center;
       align-items: center;
+   }
+   .startQuiz {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+   .start-btn {
+      font-size: 25px;
+      border-radius: 5px;
+      padding: 10px 20px;
+      color: hsl(var(--hue),100%,30%);
+      background-color: #ffff;
+      border: hsl(var(--hue),100%,50%);
+      text-align: center;
+      font-weight: bold;
+      margin: 20px;
+      border-radius: 10px;
    }
    .hide{
      display: none; 
