--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@
   }
    
 
-   @media only screen and (max-width: 300px) {
+   @media only screen and (max-width: 350px) {
       #question {
          font-size: 15px;
          color: #001e4d;
@@ -162,6 +162,14 @@
          border-radius: 5px;
          background-color: rgb(186, 133, 34);
         }
-        
+       #heading {
+   text-align: center;
+   width: 100%;
+   color: white;
+   margin-top: 15px;
+   font-size: 25px;
+   
+   text-transform: capitalize;
+       } 
      
    }
